deployment/k82s/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/instance: upload
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: upload
    app.kubernetes.io/version: 1.16.0
    helm.sh/chart: upload-0.1.0
  name: upload
  namespace: default
spec:
  ports:
  - name: http
    port: 5000
    protocol: TCP
    targetPort: http
  selector:
    app.kubernetes.io/instance: upload
    app.kubernetes.io/name: upload
  sessionAffinity: None
  type: ClusterIP
